--- a/debug/fortune.html
+++ b/debug/fortune.html
@@ -21,8 +21,10 @@ For more information, see <https://unlicense.org>
 		<script type = "text/javascript">
 			function populateFortunes( xml )
 			{
-				var jarList, jar, label, cookieList, cookie, xmlDoc, html;
+				var jarList, jar, label, cookieList, cookie, xmlDoc, html, paper;
 				xmlDoc = xml.responseXML;
+
+				paper = document.getElementByID("fortune");
 
 				jarList = xmlDoc.getElementsByTagName("jar");
 				if (jarList.length > 0)
@@ -36,7 +38,7 @@ For more information, see <https://unlicense.org>
 							label = "Unlabeled";
 						}
 						html = "<h2>" + label + "</h2>";
-						document.getElementByID( "fortune" ).innerHTML += html;
+						paper.innerHTML += html;
 						cookieList = jar.getElementsByTagName("cookie");
 						if (cookieList.length > 0)
 						{
@@ -50,7 +52,7 @@ For more information, see <https://unlicense.org>
 									html += "<p class = \"cite\">" + cookie.getElementsByTagName( "cite" ).item(0).textContent + "</p>";
 								}
 
-								document.getElementById( "fortune" ).innerHTML += html;
+								paper.innerHTML += html;
 							} // for (let i = 0; i < cookieList.length; i++)
 						} // if (cookieList.length > 0)
 					} // for (let j = 0; j < jarList.length; j++)
