Fix the "fortune" word in the debug page.
That's been bothering me for ages.

--- a/debug/fortune.html
+++ b/debug/fortune.html
@@ -84,7 +84,7 @@ For more information, see <https://unlicense.org>
 
 	<body>
 		<p>
-			This page is used to debug the <pre>fortune</pre>
+			This page is used to debug the <code>fortune</code>
 			script which prints short messages at the bottom of
 			web pages on this site.  Click <a href="/">here</a> to
 			return to the main site.
