--- a/debug/fortune.html
+++ b/debug/fortune.html
@@ -35,7 +35,7 @@ For more information, see <https://unlicense.org>
 				{
 					for (let j = 0; j < jarList.length; j++)
 					{
-						jar = jarList.item( i );
+						jar = jarList.item( j );
                         label = jar.getAttributeValue("label");
 						if (label == null)
 						{
