--- a/debug/fortune.html
+++ b/debug/fortune.html
@@ -36,7 +36,7 @@ For more information, see <https://unlicense.org>
 					for (let j = 0; j < jarList.length; j++)
 					{
 						jar = jarList.item( j );
-                        label = jar.getAttributeValue("label");
+                        label = jar.getAttribute("label");
 						if (label == null)
 						{
 							label = "Unlabeled";
