Move horizontal lines back to the top of fortunes.

--- a/debug/fortune.html
+++ b/debug/fortune.html
@@ -53,7 +53,7 @@ For more information, see <https://unlicense.org>
 							for (let i = 0; i < cookieList.length; i++)
 							{
 								cookie = cookieList.item( i );
-								html = "<p>" + cookie.getElementsByTagName( "fortune" ).item(0).textContent + "</p><hr />";
+								html = "<hr /><p>" + cookie.getElementsByTagName( "fortune" ).item(0).textContent + "</p>";
 
 								if (cookie.getElementsByTagName( "cite" ).length > 0)
 								{
