Mark the motto as "important".

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@ a:hover
 	max-width: 90%;
 }
 
+.important:before
+{
+	content: "\261E ";
+}
+
 #attribution
 {
 	display: block;
@@ -95,7 +100,7 @@ a:hover
 	GitHub.
 </p>
 <hr />
-<p>
+<p class = "important">
 	Life wouldn't seem tragic were it not also beautiful.
 </p>
 
